--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -1,6 +1,8 @@
 @mixin for-header-and-footer {
   min-height: 100px;
   display: flex;
+  flex-shrink: 0;
+  flex-grow: 0;
   align-items: center;
   background-color: #eee;
 }
@@ -18,8 +20,7 @@ body {
   #root {
     display: flex;
     flex-direction: column;
-    height: 100vh;
-    min-height: 600px;
+    min-height: 100vh;
 
     .header {
       @include for-header-and-footer();
