--- a/src/css/adjustableView.scss
+++ b/src/css/adjustableView.scss
@@ -7,8 +7,10 @@
     height: 0;
     overflow: auto;
     position: absolute;
-    background-color: #eee;
+    background-color: #fff;
     transform: translate3d(0, 0, 0);
+    box-shadow: 0 0 5px 0 #ddd;
+    border-radius: 3px;
 
     .panel-header {
       display: flex;
@@ -16,6 +18,7 @@
       border-bottom: 1px solid #ddd;
       line-height: 2rem;
       padding: 0 0.5rem;
+      font-weight: bold;
 
       // .panel-title {
 
