--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -64,7 +64,7 @@ body {
     min-height: 100%;
 
     .information-list-label {
-      width: 20%;
+      width: 5rem;
       padding: 0 0.5rem;
     }
   }
