update: styling text messages

--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -83,6 +83,17 @@ body {
 
     .conversation-body {
       flex-grow: 1;
+      overflow: scroll;
+
+      .conversation-message {
+        &.analyzing {
+          color: #999;
+        }
+
+        .speaker-label {
+          font-weight: bold;
+        }
+      }
     }
 
     .conversation-buttons {
