fix: scroll bar always display

--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -83,7 +83,7 @@ body {
 
     .conversation-body {
       flex-grow: 1;
-      overflow: scroll;
+      overflow-y: auto;
 
       .conversation-message {
         &.analyzing {
