--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -122,4 +122,20 @@ body {
       }
     }
   }
+
+  .tab-bar {
+    height: 1.5rem;
+    width: 100%;
+    display: flex;
+    margin-bottom: 0.5rem;
+
+    .tab {
+      margin: 0 0.5rem;
+      background: #fff;
+      padding: 0 0.5rem;
+      border-radius: 3px;
+      box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.1);
+      cursor: pointer;
+    }
+  }
 }
