update: messages controller

--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -56,11 +56,16 @@ body {
     }
   }
 
-  .sortable-switch {
+  .settings-switch {
     cursor: pointer;
+    display: flex;
+
+    span {
+      margin-right: 1rem;
+    }
 
     button {
-      margin-left: 1rem;
+      margin-left: auto;
     }
   }
 
