update: add animation to tab bar

--- a/src/css/adjustableView.scss
+++ b/src/css/adjustableView.scss
@@ -43,6 +43,10 @@
           &:hover {
             color: #03a9f4;
           }
+
+          &.minimize {
+            transform: rotate(-90deg);
+          }
         }
       }
     }
