--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -128,6 +128,22 @@ body {
     }
   }
 
+  .normal-menu {
+    // padding: 0 1rem;
+    margin: 0 0.5rem;
+
+    .normal-menu-item {
+      // font-size: 1.1rem;
+      padding-left: 0.5rem;
+      cursor: pointer;
+      line-height: 2rem;
+
+      &:not(:last-child) {
+        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+      }
+    }
+  }
+
   .tab-bar {
     height: 1.5rem;
     width: 100%;
