update: improve tab bar styles

--- a/src/css/adjustableView.scss
+++ b/src/css/adjustableView.scss
@@ -34,7 +34,7 @@
         padding: 0 0.5rem;
 
         button {
-          background-color: #fff;
+          background-color: inherit;
           border: none;
           cursor: pointer;
           transition: all 0.2s ease;
