--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -1,11 +1,12 @@
 @mixin for-header-and-footer {
-  min-height: 100px;
+  // min-height: 100px;
   display: flex;
   flex-shrink: 0;
   flex-grow: 0;
   align-items: center;
   background-color: #4e7383;
   color: #fff;
+  box-shadow: 0 5px 10px 0 rgba(0, 64, 128, 0.05);
 }
 
 @keyframes breathing {
@@ -52,6 +53,7 @@ body {
 
     .footer {
       @include for-header-and-footer();
+      z-index: 1001;
       justify-content: center;
     }
   }
@@ -145,26 +147,46 @@ body {
   }
 
   .tab-bar {
-    height: 1.5rem;
+    height: 1.1rem;
     width: 100%;
     display: flex;
-    margin-bottom: 0.5rem;
+    // margin-bottom: 0.5rem;
     z-index: 1000;
+    position: relative;
+    transition: all 0.2s ease;
+    margin-left: 0.5rem;
 
     .tab {
+      position: relative;
       display: flex;
       // min-width: 15%;
       overflow: hidden;
-      // margin-left: 0.5rem;
-      background: #fff;
-      // padding: 0 0.5rem;
-      border-radius: 3px;
-      box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.1);
+      // box-shadow: 0px -5px 1px 0px rgba(0, 0, 0, 0.1);
       cursor: pointer;
+      color: #fff;
 
-      .icons {
+      &::after {
+        content: '';
+        position: absolute;
+        top: -0.4rem;
+        background: #4e7383;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        z-index: -1;
+        border-radius: 5px 5px 0 0;
+        transform: perspective(0.5em) rotateX(1deg);
+        transform-origin: bottom;
+      }
+
+      .tab-name {
+        padding-left: 0.5rem;
+      }
+
+      .tab-icons {
         margin-left: auto;
         padding-left: 1rem;
+        padding-right: 0.5rem;
       }
     }
   }
