update: improve tab bar's styles

--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -147,10 +147,9 @@ body {
   }
 
   .tab-bar {
-    height: 1.1rem;
+    height: 1.3rem;
     width: 100%;
     display: flex;
-    // margin-bottom: 0.5rem;
     z-index: 1000;
     position: relative;
     transition: all 0.2s ease;
@@ -159,16 +158,16 @@ body {
     .tab {
       position: relative;
       display: flex;
-      // min-width: 15%;
       overflow: hidden;
-      // box-shadow: 0px -5px 1px 0px rgba(0, 0, 0, 0.1);
       cursor: pointer;
       color: #fff;
+      margin-left: -0.3rem;
 
       &::after {
         content: '';
         position: absolute;
-        top: -0.4rem;
+        top: -0.2rem;
+        transition: all 0.1s ease;
         background: #4e7383;
         right: 0;
         bottom: 0;
@@ -177,6 +176,11 @@ body {
         border-radius: 5px 5px 0 0;
         transform: perspective(0.5em) rotateX(1deg);
         transform-origin: bottom;
+        box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
+      }
+
+      &.minimized::after {
+        background: #6796ab;
       }
 
       .tab-name {
