--- a/src/css/adjustableView.scss
+++ b/src/css/adjustableView.scss
@@ -14,6 +14,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    .loading-icon {
+      color: #4e7383;
+    }
   }
 
   .content-loaded {
