--- a/src/css/adjustableView.scss
+++ b/src/css/adjustableView.scss
@@ -42,6 +42,7 @@
 
         .panel-title {
           padding: 0 0.5rem;
+          cursor: pointer;
           cursor: grab;
           flex-grow: 1;
 
@@ -54,7 +55,7 @@
           padding: 0 0.5rem;
 
           button {
-            background-color: inherit;
+            background-color: transparent;
             border: none;
             cursor: pointer;
             transition: all 0.2s ease;
