--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -31,6 +31,8 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    // For fix with flex-grow of the main content in IE. f*ck IE.
+    height: 0;
 
     .header {
       @include for-header-and-footer();
