--- a/src/css/adjustableView.scss
+++ b/src/css/adjustableView.scss
@@ -78,21 +78,74 @@
         padding: 0.5rem 0;
       }
 
+      .resize-border {
+        z-index: 10;
+        position: absolute;
+        $borderWidth: 5px;
+
+        &.left,
+        &.right {
+          height: 100%;
+          width: 0;
+          cursor: ew-resize;
+          border-left: $borderWidth solid transparent;
+        }
+
+        &.left {
+          left: 0;
+        }
+
+        &.right {
+          right: 0;
+        }
+
+        &.top,
+        &.bottom {
+          width: 100%;
+          height: 0;
+          cursor: ns-resize;
+          border-top: $borderWidth solid transparent;
+        }
+
+        &.top {
+          top: 0;
+        }
+
+        &.bottom {
+          bottom: 0;
+        }
+      }
+
       .resize-icon {
+        z-index: 20;
         $fontSize: 0.8rem;
         width: $fontSize;
         height: $fontSize;
-        line-height: $fontSize;
-        border-right: 1px solid #999;
-        border-bottom: 1px solid #999;
-        cursor: nwse-resize;
-        text-align: center;
-        color: #999;
         position: absolute;
-        bottom: 5px;
-        right: 5px;
-        display: inline-block;
-        // transform: rotate(45deg);
+
+        &.right-top {
+          cursor: nesw-resize;
+          top: 0;
+          right: 0;
+        }
+
+        &.right-bottom {
+          cursor: nwse-resize;
+          bottom: 0;
+          right: 0;
+        }
+
+        &.left-top {
+          cursor: nwse-resize;
+          top: 0;
+          left: 0;
+        }
+
+        &.left-bottom {
+          cursor: nesw-resize;
+          bottom: 0;
+          left: 0;
+        }
       }
     }
   }
