--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -76,11 +76,17 @@ body {
   .information-list {
     width: 100%;
     line-height: 1.5rem;
-    min-height: 100%;
+    // min-height: 100%;
 
     .information-list-label {
       width: 5rem;
       padding: 0 0.5rem;
+
+      &.large {
+        width: 6rem;
+        padding: 0;
+        padding-left: 0.5rem;
+      }
     }
   }
 
