--- a/src/css/adjustableView.scss
+++ b/src/css/adjustableView.scss
@@ -23,4 +23,18 @@
   .content-loaded {
     @include content();
   }
+
+  .panel {
+    .panel-header {
+      .panel-buttons {
+        .apply-input-switch {
+          background-color: rgba(0, 0, 0, 0.25);
+
+          &.ant-switch-checked {
+            background-color: #1890ff;
+          }
+        }
+      }
+    }
+  }
 }
