fix: typo "apply" --> "reply"

--- a/src/css/adjustableView.scss
+++ b/src/css/adjustableView.scss
@@ -27,7 +27,7 @@
   .panel {
     .panel-header {
       .panel-buttons {
-        .apply-input-switch {
+        .reply-input-switch {
           background-color: rgba(0, 0, 0, 0.25);
 
           &.ant-switch-checked {
