--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -424,4 +424,29 @@ body {
       }
     }
   }
+
+  .reply-input {
+    .reply-input-body {
+      width: 100%;
+
+      tbody {
+        margin-bottom: 1rem;
+      }
+
+      th,
+      td {
+        padding: 0 0.5rem;
+        border-bottom: 1px solid #e8e8e8;
+
+        &:not(:last-child) {
+          border-right: 1px solid #e8e8e8;
+        }
+      }
+
+      th {
+        background-color: #fafafa;
+        font-weight: normal;
+      }
+    }
+  }
 }
