update: add separator to each item

--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -433,6 +433,10 @@ body {
         margin-bottom: 1rem;
       }
 
+      .bold {
+        font-weight: bold;
+      }
+
       th,
       td {
         padding: 0 0.5rem;
