--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -15,6 +15,16 @@
   }
 }
 
+@keyframes ticker {
+  0% {
+    transform: translate3d(0, 0, 0);
+    visibility: visible;
+  }
+  100% {
+    transform: translate3d(-100%, 0, 0);
+  }
+}
+
 body {
   box-sizing: border-box;
   margin: 0;
@@ -56,7 +66,18 @@ body {
     .footer {
       @include for-header-and-footer();
       z-index: 1001;
-      justify-content: center;
+      padding-left: 100%;
+      box-sizing: content-box;
+      overflow: hidden;
+      width: 100%;
+
+      .footer-body {
+        display: inline-block;
+        padding-right: 100%;
+        white-space: nowrap;
+        box-sizing: content-box;
+        animation: ticker 25s linear infinite;
+      }
     }
   }
 
