--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -149,7 +149,8 @@ body {
           color: inherit;
 
           &.spotted {
-            background-color: #096dd9;
+            background-color: #4e7383;
+            border-color: #4e7383;
             color: white;
           }
 
