--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -481,6 +481,21 @@ body {
     .reply-input-body {
       width: 100%;
 
+      .reply-input-buttons {
+        padding: 0 2rem;
+        width: 100%;
+        text-align: center;
+
+        button {
+          margin: 0.5rem 0;
+          display: inline-block;
+
+          &:not(:last-child) {
+            margin-right: 30%;
+          }
+        }
+      }
+
       .inline-input {
         width: 100%;
       }
