update: transition between reply input and fixed menu

--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -298,7 +298,7 @@ body {
     .panel-content {
       flex-grow: 1;
       overflow: auto;
-      // padding: 0.5rem 0;
+      position: relative;
     }
 
     .resize-border {
