update: hide keyboad in mobile devices while picking date

--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -454,7 +454,7 @@ body {
   .panel.modal {
     .modal-wrapper {
       padding: 1rem;
-      height: 100%;
+      width: 100%;
       display: flex;
       flex-direction: column;
 
@@ -464,6 +464,10 @@ body {
         display: flex;
         align-items: center;
         justify-content: center;
+
+        input {
+          -webkit-appearance: none;
+        }
       }
 
       .modal-button {
