fix: full witdh of dynamic menu

--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -257,6 +257,8 @@ body {
   }
 
   .normal-menu {
+    width: 100%;
+
     .normal-menu-item {
       // font-size: 1.1rem;
       padding-left: 0.5rem;
